--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ng-bootstrap/ng-bootstrap": "^12.0.0-beta.4",
     "bootstrap": "^5.1.3",
     "jwt-decode": "^3.1.2",
+    "ngx-cookie-service": "^13.1.2",
     "ol": "^6.9.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
