Authentication token refresh fix

--- a/angular.json
+++ b/angular.json
@@ -33,6 +33,10 @@
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+            ],
+            "allowedCommonJsDependencies": [
+              "xml-utils/find-tags-by-name",
+              "lru-cache"
             ]
           },
           "configurations": {
