--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "@angular/router": "~13.1.3",
     "@ng-bootstrap/ng-bootstrap": "^12.0.0-beta.4",
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.28.0",
     "jwt-decode": "^3.1.2",
+    "ng2-search-filter": "^0.5.1",
+    "ngx-order-pipe": "^2.2.0",
+    "ngx-pagination": "^5.1.1",
     "ol": "^6.9.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
