--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/router": "~13.1.3",
     "@ng-bootstrap/ng-bootstrap": "^12.0.0-beta.4",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.0",
     "date-fns": "^2.28.0",
     "jwt-decode": "^3.1.2",
+    "ng2-charts": "^3.0.8",
     "ng2-search-filter": "^0.5.1",
     "ngx-order-pipe": "^2.2.0",
     "ngx-pagination": "^5.1.1",
@@ -34,6 +36,7 @@
     "@angular-devkit/build-angular": "~13.1.4",
     "@angular/cli": "~13.1.4",
     "@angular/compiler-cli": "~13.1.3",
+    "@types/chart.js": "^2.9.35",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
