--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "access-point-lab",
-  "version": "0.0.0",
+  "version": "1.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.2.2",
     "@angular/router": "~13.2.2",
     "@ng-bootstrap/ng-bootstrap": "^12.0.0-beta.4",
+    "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.0",
     "date-fns": "^2.28.0",
