--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.3.4",
-    "@angular/common": "~13.3.4",
-    "@angular/compiler": "~13.3.4",
-    "@angular/core": "~13.3.4",
-    "@angular/forms": "~13.3.4",
-    "@angular/platform-browser": "~13.3.4",
-    "@angular/platform-browser-dynamic": "~13.3.4",
-    "@angular/router": "~13.3.4",
+    "@angular/animations": "^14.0.6",
+    "@angular/common": "^14.0.6",
+    "@angular/compiler": "^14.0.6",
+    "@angular/core": "^14.0.6",
+    "@angular/forms": "^14.0.6",
+    "@angular/platform-browser": "^14.0.6",
+    "@angular/platform-browser-dynamic": "^14.0.6",
+    "@angular/router": "^14.0.6",
     "@ng-bootstrap/ng-bootstrap": "^12.0.2",
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
@@ -34,10 +34,10 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.3",
-    "@angular/cli": "~13.3.3",
-    "@angular/compiler-cli": "~13.3.4",
-    "@angular/localize": "13.3.4",
+    "@angular-devkit/build-angular": "^14.0.6",
+    "@angular/cli": "^14.0.6",
+    "@angular/compiler-cli": "^14.0.6",
+    "@angular/localize": "14.0.6",
     "@types/chart.js": "^2.9.35",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
@@ -47,6 +47,6 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.5.2"
+    "typescript": "~4.7.4"
   }
 }
