--- a/nginx.conf
+++ b/nginx.conf
@@ -1,16 +1,34 @@
-events{}
+worker_processes auto;
+
+pid /tmp/nginx.pid;
+
+events {
+    worker_processes 1024;
+}
 
 http {
-    include /etc/nginx/mime.types;
+    include               /etc/nginx/mime.types; 
+    client_body_temp_path /tmp/client_temp;
+    proxy_temp_path       /tmp/proxy_temp_path;
+    fastcgi_temp_path     /tmp/fastcgi_temp;
+    uwsgi_temp_path       /tmp/uwsgi_temp;
+    scgi_temp_path        /tmp/scgi_temp;
 
     server {
         listen 80;
-        server_name localhost;
-        root /usr/share/nginx/html;
+        server_name _;
+
+        charset utf-8;
+        sendfile on;
+
         index index.html;
+        error_log  /tmp/tmplog/error.log;
+        access_log /tmp/tmplog/access.log;
 
         location / {
-            try_files $uri $uri/ /index.html;
+            root /usr/share/nginx/html;
+            index index.html index.htm;
+            try_files $uri $uri/ /index.html =404;
         }
     }
 }
