Worker process and root path fix

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,6 @@
-worker_processes auto;
-
 pid /tmp/nginx.pid;
 
-events {
-    worker_processes 1024;
-}
+events {}
 
 http {
     include               /etc/nginx/mime.types; 
@@ -17,7 +13,9 @@ http {
     server {
         listen 80;
         server_name _;
-
+	
+	default_type application/octet-stream;
+	
         charset utf-8;
         sendfile on;
 
@@ -26,7 +24,7 @@ http {
         access_log /tmp/tmplog/access.log;
 
         location / {
-            root /usr/share/nginx/html;
+            root /usr/share/nginx/html/access-point-lab;
             index index.html index.htm;
             try_files $uri $uri/ /index.html =404;
         }
