Fix: Dockerfile cmd fix and base image version bump

--- a/nginx.conf
+++ b/nginx.conf
@@ -20,8 +20,8 @@ http {
         sendfile on;
 
         index index.html;
-        error_log  /tmp/tmplog/error.log;
-        access_log /tmp/tmplog/access.log;
+        error_log  /tmp/error.tmp.log;
+        access_log /tmp/access.tmp.log;
 
         location / {
             root /usr/share/nginx/html/access-point-lab;
